test/files/pos/t10779.scala
object Test {
  final val x: 1 = 1
  final val y: 2 = 2
  x + 2: 3 //ok
  1 + y: 3 //ok
  x + y: 3 //ok
}
